  box did not take effect for currently opened views.

- Fixed a few dockable window layout problems.

- Fix for numeric keypad not working after switch virtual desktops with
  various keyboard sequences on Linux.

- Fixed a performance regression -- the entire text area was being
  repainted on every edit.

- apacheconf.xml in 4.2pre7 distribution was corrupted.

}}}

}}}

{{{ Version 4.2pre7

Thanks to Aaron Bell, Alessandro Falappa, Ben Williams, Chris Petersen,
Kris Kopicki, Lee Turner, Ollie Rutherfurd, Mike Dillon, Randolf Mock,
and Randy Hudson for contributing to this release.

{{{ Miscellaneous

- The list of modes in various dialog boxes is now sorted (this does not
  affect the order that buffer names are matched against modes).

- Bundled some macros from various sources (Ollie Rutherfurd).

- The plugin manager no longer lists the JDK's "tools.jar" if it is
  loaded.

- The "Search in Directory" command now always selects the most recently
  searched in directory. To search in the current directory with the
  filter based on the current buffer's file name, click the
  "Synchronize" button.

- Updated "Preview Javadoc of Current Buffer" macro (Tom Gutwin).

- Added option to file system browser's Commands->Encoding menu to
  disable encoding auto-detection.

- Added support for UTF-8Y encoding, which is like UTF-8 except there
  is a three-byte signature (0xEFBBBF) at the beginning of the file.
  See http://oss.software.ibm.com/icu/docs/papers/forms_of_unicode/#t2.
  UTF-8Y files are automatically detected, just like UTF-16.

- Removed File->Insert File command. As before, you can still invoke
  File->Open and select "Insert" from a file's right-click menu in the
  file system browser.

- Added "Display Actions" macro (Lee Turner).

- Wrote "What's new in jEdit 4.2" document.

}}}
{{{ Syntax Highlighting

- Added MoinMoin syntax highlighting (Ollie Rutherfurd).

- Added Relax NG compact syntax highlighting (Randy Hudson).
